--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
             gap: 50px;
         }
 
+        .score-container div h2 {
+            padding-bottom: 10px;
+        }
+
         .score-container div span {
             color: #fff;
             padding: 10px;
@@ -76,6 +80,12 @@
             background-color: rgb(173, 19, 19);
             padding: 10px;
             margin: 45px;
+        }
+        #restar-jugador-1,
+        #sumar-jugador-1,
+        #restar-jugador-2,
+        #sumar-jugador-2 {
+            font-size: 20px;
         }
     </style>
 </head>
